Added ids to Submitted and Approved tables on left menu. Also added validation rules to search page to confirm these tables exists

--- a/src/UI/Views/ToDo/Index.cshtml
+++ b/src/UI/Views/ToDo/Index.cshtml
@@ -8,7 +8,7 @@
                 <th colspan="2">Submitted</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody id="SubmittedExpenseReportsTable">
             @foreach (ExpenseReport report in Model.Submitted)
             {
                 <tr>
@@ -24,7 +24,7 @@
                 <th colspan="2">Approved</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody id="ApprovedExpenseReportsTable">
             @foreach (ExpenseReport report in Model.Approved)
             {
                 <tr>
