Added id to search results page and added validation rule to confirm the table exists when loading the search page

--- a/src/UI/Views/ExpenseReportSearch/Index.cshtml
+++ b/src/UI/Views/ExpenseReportSearch/Index.cshtml
@@ -5,7 +5,7 @@
 @{
     ViewBag.Title = "Search Results";
 }
-<div class="well form-horizontal">
+<div class="well form-horizontal" id="SearchFilters">
     <fieldset>
         <form method="GET">
             <div class="col-lg-3 form-group">
@@ -39,7 +39,7 @@
             <th>Title</th>
         </tr>
     </thead>
-    <tbody>
+    <tbody id="SearchResults">
     @{ int i=0;
     foreach (var report in Model.Results)
     {
