--- a/src/UI/Views/Shared/_Layout.cshtml
+++ b/src/UI/Views/Shared/_Layout.cshtml
@@ -73,6 +73,7 @@ else
         <div class="container">
             <footer>
                 <p>&copy; @DateTime.Now.Year - Version @Html.GetProductVersionNumber()</p>
+                <p>Environment: #{Octopus.Environment.Name} - Machine: #{Octopus.Machine.Name} - Release: #{Octopus.Release.Number}</p>
             </footer>
         </div>
         @Scripts.Render("~/bundles/jquery")
