--- a/src/UI/Views/Shared/_Layout.cshtml
+++ b/src/UI/Views/Shared/_Layout.cshtml
@@ -74,6 +74,7 @@ else
             <footer>
                 <p>&copy; @DateTime.Now.Year - Version @Html.GetProductVersionNumber()</p>
                 <p>Environment: #{Octopus.Environment.Name} - Machine: #{Octopus.Machine.Name} - Release: #{Octopus.Release.Number}</p>
+                <p>Database: #{DatabaseName}</p>
             </footer>
         </div>
         @Scripts.Render("~/bundles/jquery")
