--- a/src/UI/Views/Shared/_Layout.cshtml
+++ b/src/UI/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
         <div class="container">
             <div class="navbar-header">
                 @Html.Action("Menu", "Navigation")
+                @Html.laskdjflaskdjfalskdfalsd
             </div>
         </div>
     </div>
