Cleaned up to base functionality.

--- a/src/UI/Views/ExpenseReport/Manage.cshtml
+++ b/src/UI/Views/ExpenseReport/Manage.cshtml
@@ -93,7 +93,7 @@
                         <div style="padding:5px; text-align:right;">
                             @if (Model.IsReadOnly)
                             {
-                                <text>This work order is read-only for you at this time.</text>
+                                <text>This expense report is read-only for you at this time.</text>
                             }
                             else
                             {
