Not displaying correct date when read only

--- a/src/UI/Views/ExpenseReport/Manage.cshtml
+++ b/src/UI/Views/ExpenseReport/Manage.cshtml
@@ -63,7 +63,7 @@
                 }
                 else
                 {
-                    @Html.TextBoxFor(x => x.ExpenseDate, "{0:yyyy-MM-dd}", new { @class = "form-control", disabled = "disabled" })
+                    @Html.TextBoxFor(x => x.ExpenseDate, "{0:yyyy-MM-dd}", new { @class = "form-control", disabled = "disabled", type="date" })
                 }
             </div>
         </div>
