--- a/src/UI/Views/ExpenseReport/Manage.cshtml
+++ b/src/UI/Views/ExpenseReport/Manage.cshtml
@@ -79,6 +79,20 @@
                 }
             </div>
         </div>
+
+        <div class="form-group">
+            @Html.LabelFor(x => x.Total, new { @class = "col-lg-2 control-label" })
+            <div class="col-lg-10">
+                @if (!Model.IsReadOnly)
+                {
+                    @Html.TextBoxFor(x => x.ExpenseDate, new { @class = "form-control", placeholder = "Expense Date" })
+                }
+                else
+                {
+                    @Html.TextBoxFor(x => x.ExpenseDate, new { @class = "form-control", disabled = "disabled" })
+                }
+            </div>
+        </div>
 @*    <div class="form-group">*@
 @*        <div class="col-lg-2">Created Date</div>*@
 @*        <div class="col-lg-10">@Model.SubmittedDate</div>*@
