--- a/src/UI/Views/Shared/_Layout.cshtml
+++ b/src/UI/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
         </div>
         <div class="container body-content">
             <div class="row">
-                <h1>MeasureUP Report System</h1>
+                <h1>Expense Report System</h1>
             </div>
             <div id=unauthorized class=content-container>
                 <p>
