--- a/src/UI/Views/ExpenseReport/Manage.cshtml
+++ b/src/UI/Views/ExpenseReport/Manage.cshtml
@@ -99,7 +99,7 @@
                             {
                                 foreach (IStateCommand command in Html.GetValidCommands((ExpenseReport)ViewBag.ExpenseReport, (Employee)ViewBag.CurrentUser))
                                 {
-                                    <button class="btn btn-default" type="submit" name="command" value="@command.TransitionVerbPresentTense">Do it</button>
+                                    <button class="btn btn-default" type="submit" name="command" value="@command.TransitionVerbPresentTense">@command.TransitionVerbPresentTense</button>
                                 }
                             }
                         </div>
